src/parser.ts
import {
  ActionArg,
  ActionCallNode,
  AlignOption,
  ArrayExprNode,
  AssertStmtNode,
  BinaryExprNode,
  BindingDeclNode,
  BindingRuleNode,
  BindingStmt,
  CallExprNode,
  CameraDeclNode,
  CameraItem,
  ConstDeclNode,
  DeckItem,
  DeckNode,
  DiagramAssetsDeclNode,
  DiagramDeclNode,
  DiagramItem,
  DoStmtNode,
  EdgeRef,
  EdgeTuple,
  EventSpecNode,
  Expr,
  FocusOptions,
  FocusStmtNode,
  LetStmtNode,
  LiteralExprNode,
  LockMode,
  MetaDeclNode,
  MetaEntry,
  MermaidConfigDeclNode,
  MermaidSourceDeclNode,
  NameValue,
  NavigationDeclNode,
  NavigationItem,
  NodeRef,
  ObjectEntryNode,
  ObjectExprNode,
  OverlayDeclNode,
  OverlayItem,
  ParseResult,
  PerformanceDeclNode,
  PluginDeclNode,
  ProgramNode,
  RuntimeDeclNode,
  RuntimeItem,
  SceneDeclNode,
  SceneItem,
  SelectorsDeclNode,
  SelectorsItem,
  SourceSpan,
  StepDeclNode,
  StepStmt,
  StylesDeclNode,
  StylesItem,
  SubgraphRef,
  TargetExprNode,
  TargetExceptExpr,
  TargetGroupExpr,
  TargetIntersectExpr,
  TargetUnionExpr,
  UnaryExprNode,
  UnknownBlockNode,
  VarRefNode
} from "./ast";
import { Diagnostic } from "./ast";
import { Token, lexMPD } from "./lexer";

const SUPPORTED_VERSION = "1.0";

export function parseMPD(source: string): ParseResult {
  const lexed = lexMPD(source);
  const parser = new MPDParser(source, lexed.tokens, lexed.diagnostics);
  const ast = parser.parseProgram();
  const diagnostics = parser.diagnostics;
  if (ast) {
    diagnostics.push(...validateAST(ast));
  }
  return { ast, diagnostics };
}

class MPDParser {
  private index = 0;
  public diagnostics: Diagnostic[];
  private static readonly KEYWORD_ITEM_PARSERS: Record<
    string,
    (parser: MPDParser) => DeckItem | null
  > = {
    diagram: (parser) => parser.parseDiagramDecl(),
    runtime: (parser) => parser.parseRuntimeDecl(),
    selectors: (parser) => parser.parseSelectorsDecl(),
    styles: (parser) => parser.parseStylesDecl(),
    let: (parser) => parser.parseConstDecl(),
    scene: (parser) => parser.parseSceneDecl(),
    binding: (parser) => parser.parseBindingDecl(),
    use: (parser) => parser.parsePluginDecl(),
    meta: (parser) => parser.parseMetaDecl()
  };

  constructor(
    private readonly source: string,
    private readonly tokens: Token[],
    diagnostics: Diagnostic[]
  ) {
    this.diagnostics = diagnostics.slice();
  }

  parseProgram(): ProgramNode | null {
    const start = this.peek();
    if (!this.consumeKeyword("mpd")) {
      return null;
    }
    const version = this.parseVersion();
    if (!version) {
      return null;
    }
    const body: DeckItem[] = [];
    if (this.matchKeyword("deck")) {
      const deck = this.parseDeck();
      if (deck) {
        body.push(deck);
      }
    } else {
      while (!this.isAtEnd()) {
        const item = this.parseTopLevelItem();
        if (!item) {
          break;
        }
        body.push(item);
      }
    }
    const end = this.previous();
    return {
      type: "Program",
      version: version.value,
      body,
      span: spanFrom(start, end)
    };
  }

  private parseDeck(): DeckNode | null {
    const start = this.consumeKeyword("deck");
    if (!start) {
      return null;
    }
    const name = this.parseOptionalName();
    const { items, end } = this.parseBlock(() => this.parseDeckItem());
    return {
      type: "Deck",
      name: name ?? undefined,
      items,
      span: spanFrom(start, end)
    };
  }

  private parseTopLevelItem(): DeckItem | null {
    return this.parseDeckItemInternal(true);
  }

  private parseDeckItem(): DeckItem | null {
    return this.parseDeckItemInternal(false);
  }

  private parseDeckItemInternal(reportErrors: boolean): DeckItem | null {
    if (this.isAtEnd()) {
      return null;
    }
    const token = this.peek();
    if (token.type === "keyword") {
      const handler = MPDParser.KEYWORD_ITEM_PARSERS[token.value];
      if (handler) {
        return handler(this);
      }
    }
    if (token.type === "identifier") {
      return this.parseUnknownBlock();
    }
    if (reportErrors) {
      this.error(token, "top-level declaration");
    }
    return null;
  }

  private parseUnknownBlock(): UnknownBlockNode | null {
    const nameToken = this.consume("identifier");
    if (!nameToken) {
      return null;
    }
    const brace = this.consumePunct("{");
    if (!brace) {
      return null;
    }
    let depth = 1;
    while (!this.isAtEnd() && depth > 0) {
      const token = this.peek();
      if (token.type === "punct" && token.value === "{") {
        depth += 1;
      } else if (token.type === "punct" && token.value === "}") {
        depth -= 1;
      }
      this.advance();
    }
    const end = this.previous();
    const content = this.source.slice(brace.start.offset, end.end.offset);
    return {
      type: "UnknownBlock",
      name: nameToken.value,
      content,
      span: spanFrom(nameToken, end)
    };
  }

  private parseMetaDecl(): MetaDeclNode | null {
    const start = this.consumeKeyword("meta");
    if (!start) {
      return null;
    }
    const items: MetaEntry[] = [];
    this.consumePunct("{");
    while (!this.isAtEnd() && !this.matchPunct("}")) {
      const entry = this.parseMetaEntry();
      if (entry) {
        items.push(entry);
      }
      if (this.matchPunct(",")) {
        this.consumePunct(",");
      }
    }
    const end = this.consumePunct("}") ?? this.previous();
    return {
      type: "MetaDecl",
      entries: items,
      span: spanFrom(start, end)
    };
  }

  private parseMetaEntry(): MetaEntry | null {
    const key = this.consume("identifier");
    if (!key) {
      return null;
    }
    this.consumePunct(":");
    const value = this.parseExpr();
    if (!value) {
      return null;
    }
    return {
      type: "MetaEntry",
      key: key.value,
      value,
      span: spanFrom(key, this.previous())
    };
  }

  private parseConstDecl(): ConstDeclNode | null {
    const start = this.consumeKeyword("let");
    if (!start) {
      return null;
    }
    const name = this.consume("identifier");
    if (!name) {
      return null;
    }
    this.consumePunct("=");
    const value = this.parseExpr();
    this.consumePunct(";");
    return {
      type: "ConstDecl",
      name: name.value,
      value: value ?? this.emptyLiteral(name),
      span: spanFrom(start, this.previous())
    };
  }

  private parsePluginDecl(): PluginDeclNode | null {
    const start = this.consumeKeyword("use");
    if (!start) {
      return null;
    }
    const ref = this.parseName();
    let options: ObjectExprNode | undefined;
    if (this.peek().type === "punct" && this.peek().value === "{") {
      options = this.parseObjectExpr();
    }
    this.consumePunct(";");
    return {
      type: "PluginDecl",
      ref,
      options,
      span: spanFrom(start, this.previous())
    };
  }

  private parseDiagramDecl(): DiagramDeclNode | null {
    const start = this.consumeKeyword("diagram");
    if (!start) {
      return null;
    }
    const id = this.parseName();
    const { items, end } = this.parseBlock(() => this.parseDiagramItem());
    return {
      type: "DiagramDecl",
      id,
      items: items.filter((item): item is DiagramItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseDiagramItem(): DiagramItem | null {
    const token = this.peek();
    if (token.type === "keyword") {
      switch (token.value) {
        case "mermaid":
          return this.parseMermaidSourceDecl();
        case "config":
          return this.parseMermaidConfigDecl();
        case "assets":
          return this.parseDiagramAssetsDecl();
        case "meta":
          return this.parseMetaDecl();
        default:
          break;
      }
    }
    return null;
  }

  private parseMermaidSourceDecl(): MermaidSourceDeclNode | null {
    const start = this.consumeKeyword("mermaid");
    if (!start) {
      return null;
    }
    const heredocToken = this.consume("heredoc");
    if (!heredocToken || !heredocToken.heredoc) {
      return null;
    }
    this.consumePunct(";");
    return {
      type: "MermaidSourceDecl",
      source: heredocToken.heredoc.body,
      tag: heredocToken.heredoc.tag,
      span: spanFrom(start, this.previous())
    };
  }

  private parseMermaidConfigDecl(): MermaidConfigDeclNode | null {
    const start = this.consumeKeyword("config");
    if (!start) {
      return null;
    }
    const config = this.parseObjectExpr();
    this.consumePunct(";");
    return {
      type: "MermaidConfigDecl",
      config,
      span: spanFrom(start, this.previous())
    };
  }

  private parseDiagramAssetsDecl(): DiagramAssetsDeclNode | null {
    const start = this.consumeKeyword("assets");
    if (!start) {
      return null;
    }
    const assets = this.parseObjectExpr();
    this.consumePunct(";");
    return {
      type: "DiagramAssetsDecl",
      assets,
      span: spanFrom(start, this.previous())
    };
  }

  private parseRuntimeDecl(): RuntimeDeclNode | null {
    const start = this.consumeKeyword("runtime");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseRuntimeItem());
    return {
      type: "RuntimeDecl",
      items: items.filter((item): item is RuntimeItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseRuntimeItem(): RuntimeItem | null {
    const token = this.peek();
    if (token.type === "keyword") {
      switch (token.value) {
        case "camera":
          return this.parseCameraDecl();
        case "overlay":
          return this.parseOverlayDecl();
        case "navigation":
          return this.parseNavigationDecl();
        case "performance":
          return this.parsePerformanceDecl();
        case "meta":
          return this.parseMetaDecl();
        default:
          break;
      }
    }
    return null;
  }

  private parseCameraDecl(): CameraDeclNode | null {
    const start = this.consumeKeyword("camera");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseCameraItem());
    return {
      type: "CameraDecl",
      items: items.filter((item): item is CameraItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseCameraItem(): CameraItem | null {
    if (this.matchKeyword("engine")) {
      const start = this.consumeKeyword("engine");
      this.consumePunct(":");
      const name = this.parseName();
      this.consumePunct(";");
      return {
        type: "CameraEngine",
        name,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("options")) {
      const start = this.consumeKeyword("options");
      this.consumePunct(":");
      const options = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "CameraOptions",
        options,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("bounds")) {
      const start = this.consumeKeyword("bounds");
      this.consumePunct(":");
      const boundsToken = this.consume("keyword");
      const bounds = (boundsToken?.value ?? "viewport") as "viewport" | "container" | "svg";
      this.consumePunct(";");
      return {
        type: "CameraBounds",
        bounds,
        span: spanFrom(start!, this.previous())
      };
    }
    return null;
  }

  private parseOverlayDecl(): OverlayDeclNode | null {
    const start = this.consumeKeyword("overlay");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseOverlayItem());
    return {
      type: "OverlayDecl",
      items: items.filter((item): item is OverlayItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseOverlayItem(): OverlayItem | null {
    if (this.matchKeyword("engine")) {
      const start = this.consumeKeyword("engine");
      this.consumePunct(":");
      const name = this.parseName();
      this.consumePunct(";");
      return {
        type: "OverlayEngine",
        name,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("options")) {
      const start = this.consumeKeyword("options");
      this.consumePunct(":");
      const options = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "OverlayOptions",
        options,
        span: spanFrom(start!, this.previous())
      };
    }
    return null;
  }

  private parseNavigationDecl(): NavigationDeclNode | null {
    const start = this.consumeKeyword("navigation");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseNavigationItem());
    return {
      type: "NavigationDecl",
      items: items.filter((item): item is NavigationItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseNavigationItem(): NavigationItem | null {
    if (this.matchKeyword("keys")) {
      const start = this.consumeKeyword("keys");
      this.consumePunct(":");
      const options = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "NavigationKeys",
        options,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("wheelZoom")) {
      const start = this.consumeKeyword("wheelZoom");
      this.consumePunct(":");
      const value = this.parseBoolean();
      this.consumePunct(";");
      return {
        type: "NavigationWheelZoom",
        value,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("dragPan")) {
      const start = this.consumeKeyword("dragPan");
      this.consumePunct(":");
      const value = this.parseBoolean();
      this.consumePunct(";");
      return {
        type: "NavigationDragPan",
        value,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("tapToAdvance")) {
      const start = this.consumeKeyword("tapToAdvance");
      this.consumePunct(":");
      const value = this.parseBoolean();
      this.consumePunct(";");
      return {
        type: "NavigationTapToAdvance",
        value,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("progressUI")) {
      const start = this.consumeKeyword("progressUI");
      this.consumePunct(":");
      const value = this.parseBoolean();
      this.consumePunct(";");
      return {
        type: "NavigationProgressUI",
        value,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("startAt")) {
      const start = this.consumeKeyword("startAt");
      this.consumePunct(":");
      const valueToken = this.peek();
      let value: number | string = 0;
      if (valueToken.type === "int" || valueToken.type === "number") {
        this.advance();
        value = Number(valueToken.value);
      } else if (valueToken.type === "string") {
        this.advance();
        value = valueToken.value;
      } else {
        this.error(valueToken, "number or string");
      }
      this.consumePunct(";");
      return {
        type: "NavigationStartAt",
        value,
        span: spanFrom(start!, this.previous())
      };
    }
    return null;
  }

  private parsePerformanceDecl(): PerformanceDeclNode | null {
    const start = this.consumeKeyword("performance");
    if (!start) {
      return null;
    }
    const options = this.parseObjectExpr();
    this.consumePunct(";");
    return {
      type: "PerformanceDecl",
      options,
      span: spanFrom(start, this.previous())
    };
  }

  private parseSelectorsDecl(): SelectorsDeclNode | null {
    const start = this.consumeKeyword("selectors");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseSelectorsItem());
    return {
      type: "SelectorsDecl",
      items: items.filter((item): item is SelectorsItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseSelectorsItem(): SelectorsItem | null {
    if (this.matchKeyword("strategy")) {
      const start = this.consumeKeyword("strategy");
      this.consumePunct(":");
      const strategyToken = this.consume("keyword");
      const strategy = (strategyToken?.value ?? "css") as SelectorsItem["strategy"];
      this.consumePunct(";");
      return {
        type: "SelectorsStrategy",
        strategy,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("fallback")) {
      const start = this.consumeKeyword("fallback");
      this.consumePunct(":");
      const fallback = this.parseArrayExpr();
      this.consumePunct(";");
      return {
        type: "SelectorsFallback",
        fallback,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("node")) {
      const start = this.consumeKeyword("node");
      this.consumePunct(":");
      const spec = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "SelectorsNode",
        spec,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("edge")) {
      const start = this.consumeKeyword("edge");
      this.consumePunct(":");
      const spec = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "SelectorsEdge",
        spec,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("subgraph")) {
      const start = this.consumeKeyword("subgraph");
      this.consumePunct(":");
      const spec = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "SelectorsSubgraph",
        spec,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("meta")) {
      return this.parseMetaDecl();
    }
    return null;
  }

  private parseStylesDecl(): StylesDeclNode | null {
    const start = this.consumeKeyword("styles");
    if (!start) {
      return null;
    }
    const { items, end } = this.parseBlock(() => this.parseStylesItem());
    return {
      type: "StylesDecl",
      items: items.filter((item): item is StylesItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseStylesItem(): StylesItem | null {
    if (this.matchKeyword("classes")) {
      const start = this.consumeKeyword("classes");
      this.consumePunct(":");
      const classes = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "StylesClasses",
        classes,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("spotlight")) {
      const start = this.consumeKeyword("spotlight");
      this.consumePunct(":");
      const spotlight = this.parseObjectExpr();
      this.consumePunct(";");
      return {
        type: "StylesSpotlight",
        spotlight,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("theme")) {
      const start = this.consumeKeyword("theme");
      this.consumePunct(":");
      const theme = this.parseName();
      this.consumePunct(";");
      return {
        type: "StylesTheme",
        theme,
        span: spanFrom(start!, this.previous())
      };
    }
    if (this.matchKeyword("meta")) {
      return this.parseMetaDecl();
    }
    return null;
  }

  private parseSceneDecl(): SceneDeclNode | null {
    const start = this.consumeKeyword("scene");
    if (!start) {
      return null;
    }
    const name = this.parseName();
    let diagram: NameValue | undefined;
    if (this.matchKeyword("diagram")) {
      this.consumeKeyword("diagram");
      diagram = this.parseName();
    }
    const { items, end } = this.parseBlock(() => this.parseSceneItem());
    return {
      type: "SceneDecl",
      name,
      diagram,
      items: items.filter((item): item is SceneItem => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseSceneItem(): SceneItem | null {
    const token = this.peek();
    if (token.type === "keyword") {
      switch (token.value) {
        case "step":
          return this.parseStepDecl();
        case "binding":
          return this.parseBindingDecl();
        case "meta":
          return this.parseMetaDecl();
        case "let":
          return this.parseConstDecl();
        default:
          break;
      }
    }
    return null;
  }

  private parseStepDecl(): StepDeclNode | null {
    const start = this.consumeKeyword("step");
    if (!start) {
      return null;
    }
    const name = this.parseName();
    let alias: string | undefined;
    if (this.matchKeyword("as")) {
      this.consumeKeyword("as");
      const ident = this.consume("identifier");
      alias = ident?.value;
    }
    const { items, end } = this.parseBlock(() => this.parseStepStmt());
    return {
      type: "StepDecl",
      name,
      alias,
      statements: items.filter((item): item is StepStmt => item !== null),
      span: spanFrom(start, end)
    };
  }

  private parseStepStmt(): StepStmt | null {
    const token = this.peek();
    if (token.type === "keyword") {
      switch (token.value) {
        case "focus":
          return this.parseFocusStmt();
        case "do":
          return this.parseDoStmt();
        case "let":
          return this.parseLetStmt();
        case "assert":
          return this.parseAssertStmt();
        case "meta":
          return this.parseMetaDecl();
        default:
          break;
      }
    }
    return null;
  }

  private parseFocusStmt(): FocusStmtNode | null {
    const start = this.consumeKeyword("focus");
    if (!start) {
      return null;
    }
    const target = this.parseTargetExpr();
    const options: FocusOptions = {};
    while (true) {
      if (this.matchKeyword("pad")) {
        this.consumeKeyword("pad");
        const value = this.parseNumber();
        options.pad = value;
        continue;
      }
      if (this.matchKeyword("align")) {
        this.consumeKeyword("align");
        const alignToken = this.consume("keyword");
        options.align = (alignToken?.value ?? "center") as AlignOption;
        continue;
      }
      if (this.matchKeyword("lock")) {
        this.consumeKeyword("lock");
        const lockToken = this.consume("keyword");
        options.lock = (lockToken?.value ?? "none") as LockMode;
        continue;
      }
      if (this.matchKeyword("id")) {
        this.consumeKeyword("id");
        const ident = this.consume("identifier");
        if (ident) {
          options.id = ident.value;
        }
        continue;
      }
      break;
    }
    this.consumePunct(";");
    return {
      type: "FocusStmt",
      target: target ?? this.emptyTarget(start),
      options,
      span: spanFrom(start, this.previous())
    };
  }

  private parseDoStmt(): DoStmtNode | null {
    const start = this.consumeKeyword("do");
    if (!start) {
      return null;
    }
    const action = this.parseActionCall();
    this.consumePunct(";");
    return {
      type: "DoStmt",
      action: action ?? this.emptyAction(start),
      span: spanFrom(start, this.previous())
    };
  }
